--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gbl",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -14,12 +15,14 @@
     "firebase": "^9.8.1",
     "http-proxy-middleware": "^2.0.6",
     "i": "^0.3.7",
+    "lottie-web": "^5.9.6",
     "node-sass": "^7.0.1",
     "npm": "^8.11.0",
     "qrcode.react": "^3.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-player": "^2.10.1",
+    "react-qr-scanner": "^1.0.0-alpha.8",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
